# airsstack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: airsstack-code-reviewer.md  airsstack-coder.md  airsstack-spec-reviewer.md  airsstack-verifier.md
.claude/rules/: ai-agent-orchestration.md  ai-model-routing.md  ai-superpowers-artifacts.md  git-commits.md  rust-doc-comment-discipline.md  rust-microsoft-guidelines.md  rust-mod-rs-export-only.md  rust-static-dispatch.md  rust-strict-quality.md  rust-strong-types.md  rust-unit-test-mandate.md  rust-workspace.md
.claude/skills/snapshot-load/: SKILL.md
.claude/skills/snapshot-save/: SKILL.md
crates/airs-transport/: Cargo.toml  README.md
crates/airs-transport/src/: body.rs  collect.rs  error.rs  http_transport.rs  lib.rs  mock.rs  reqwest_impl.rs  transport.rs
crates/clauders/: Cargo.toml  README.md
crates/clauders/docs/: agent-sdk-roadmap.md
crates/clauders/examples/: 01_hello.rs  02_streaming.rs  03_tools.rs  04_caching.rs
crates/clauders/src/: auth.rs  builder.rs  client.rs  config.rs  error.rs  headers.rs  lib.rs  prelude.rs  retry.rs  wire_helpers.rs
crates/clauders/src/agent/: capabilities.rs  client.rs  content.rs  error.rs  hooks.rs  message.rs  mock.rs  mod.rs  options.rs  permissions.rs  runtime.rs  stream.rs
crates/clauders/src/agent/cli/: argv.rs  demux.rs  discovery.rs  dispatch.rs  handshake.rs  mod.rs  runtime.rs
crates/clauders/src/agent/process/: error.rs  guard.rs  handle.rs  io.rs  mod.rs  pipes.rs  spawn.rs  supervisor.rs
crates/clauders/src/agent/protocol/: codec.rs  frames.rs  mod.rs
crates/clauders/src/agent/types/: mcp.rs  mod.rs  prompt.rs  session_id.rs
crates/clauders/src/messages/: content.rs  mod.rs  request.rs  resource.rs  response.rs  streaming.rs  structured_outputs.rs  token_counting.rs  tools.rs
crates/clauders/src/messages/batches/: mod.rs  resource.rs  results.rs  types.rs
crates/clauders/src/models/: mod.rs  resource.rs  types.rs
crates/clauders/src/transport/: body.rs  mock.rs  mod.rs  reqwest_impl.rs  seam.rs
crates/clauders/src/types/: api_key.rs  base_url.rs  batch_id.rs  caching.rs  custom_request_id.rs  ids.rs  mod.rs  model_id.rs  numeric.rs  system.rs  version.rs
crates/clauders/tests/: agent_e2e.rs  agent_process.rs  builder_compile.rs  builder_runtime.rs  messages_batches.rs  messages_caching.rs  messages_count_tokens.rs  messages_create.rs  messages_snapshot.rs  messages_streaming.rs  messages_structured_outputs.rs  messages_tools.rs  models.rs  transport_mock.rs  transport_reqwest.rs
crates/clauders/tests/compile_fail/: builder_missing_api_key.rs  builder_missing_api_key.stderr  request_missing_max_tokens.rs  request_missing_max_tokens.stderr  request_missing_model.rs  request_missing_model.stderr
crates/clauders/tests/compile_pass/: full_builder.rs
crates/clauders/tests/snapshots/: messages_snapshot__snapshot_minimal_request.snap  messages_snapshot__snapshot_request_with_optional_params.snap
crates/openrouter-rs/: Cargo.toml  README.md
crates/openrouter-rs/examples/: 01_chat.rs  02_streaming.rs  03_tools.rs  04_caching.rs
crates/openrouter-rs/src/: auth.rs  builder.rs  client.rs  config.rs  error.rs  headers.rs  lib.rs  prelude.rs  wire_helpers.rs
crates/openrouter-rs/src/chat/: builder.rs  cache_control.rs  cached.rs  message.rs  mod.rs  provider.rs  request.rs  resource.rs  response.rs  response_cache.rs  response_format.rs  stream.rs  stream_chunk.rs  token_details.rs  tool.rs  tool_call.rs  usage.rs
crates/openrouter-rs/src/models/: mod.rs  model.rs  resource.rs
crates/openrouter-rs/src/transport/: body.rs  mock.rs  mod.rs  reqwest_impl.rs  seam.rs
crates/openrouter-rs/src/types/: api_key.rs  base_url.rs  function_name.rs  mod.rs  model_id.rs  numeric.rs  price.rs  price_per_token.rs  provider_slug.rs  schema_name.rs  stop_sequences.rs  tool_call_id.rs
crates/openrouter-rs/tests/: builder_compile.rs  transport_mock.rs
crates/openrouter-rs/tests/compile_fail/: chat_missing_messages.rs  chat_missing_messages.stderr  chat_missing_model.rs  chat_missing_model.stderr  client_missing_api_key.rs  client_missing_api_key.stderr
crates/openrouter-rs/tests/compile_pass/: full_chat_request.rs
docs/plans/: 2026-06-06-airs-transport-extraction.md
docs/specs/: 2026-06-06-airs-transport-extraction.md
plugins/airsstack/: README.md
plugins/airsstack-cmux/: README.md
plugins/airsstack-cmux/.claude-plugin/: plugin.json
plugins/airsstack-guideline-rust/: README.md  enforcement.json
plugins/airsstack-guideline-rust/.claude-plugin/: plugin.json
plugins/airsstack-journal/: README.md
plugins/airsstack-journal/.claude-plugin/: plugin.json
plugins/airsstack-journal/agents/: journal-capture.md  journal-curator.md  journal-note.md  journal-recall.md
plugins/airsstack-journal/commands/: journal-setup.md
plugins/airsstack-journal/hooks/: hooks.json
plugins/airsstack-journal/references/: note-schema.md
plugins/airsstack-journal/scripts/: build-index.py  build-index.test.py  bump-helped.sh  bump-helped.test.sh  daily-link.sh  daily-link.test.sh  graph-health.py  graph-health.test.sh  journal-backup.sh  journal-backup.test.sh  orientation.sh  orientation.test.sh  project-key.sh  project-key.test.sh  provision.sh  provision.test.sh  record-session.py  record-session.test.py  session-start.sh  session-start.test.sh  transcript-path.sh  transcript-path.test.sh
plugins/airsstack-plugin-dev/: README.md
plugins/airsstack-plugin-dev/.claude-plugin/: plugin.json
plugins/airsstack-plugin-dev/hooks/: cache_sync.py  hooks.json  test_cache_sync.py
plugins/airsstack-sdd/: README.md
plugins/airsstack-sdd/.claude-plugin/: plugin.json
plugins/airsstack-sdd/commands/: setup.md
plugins/airsstack-sdd/hooks/: ensure-layout.sh  ensure-layout.test.sh  hooks.json  test-ensure-layout.sh
plugins/airsstack-sdd/references/: artifact-paths.md
plugins/airsstack/.claude-plugin/: plugin.json
plugins/airsstack/agents/: coder.md  (+3 more)
(+60 files in other folders)
