[workspace]
resolver = "3"
members  = ["crates/clauders"]

[workspace.package]
edition       = "2024"
rust-version  = "1.85"
license       = "Apache-2.0"
repository    = "https://github.com/rstlix0x0/airsstack"
authors       = ["rstlix0x0 <rstlix.dev@gmail.com>"]
publish       = false

[workspace.dependencies]
# Async runtime — core (tokio-only stance per spec §3)
tokio              = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util"] }
# HTTP types + bodies + streams
http               = "1.4.1"
http-body          = "1.0.1"
http-body-util     = "0.1.3"
bytes              = "1.11.1"
futures-core       = "0.3.32"
futures-util       = { version = "0.3.32", default-features = false, features = ["std"] }
pin-project-lite   = "0.2.17"
# Default transport (feature-gated in member crate)
reqwest            = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "http2"] }
# SSE parsing
eventsource-stream = "0.2.3"
# Serialization
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.150"
# Errors + tracing + traits
thiserror          = "2.0.18"
tracing            = "0.1.44"
async-trait        = "0.1.89"
# URL handling + secret protection
url                = "2.5.8"
secrecy            = "0.10.3"
# Dev-only (member crates reference these in [dev-dependencies])
mockall            = "0.14.0"
wiremock           = "0.6.5"
insta              = "1.47.2"
trybuild           = "1"

[workspace.lints.rust]
unsafe_code        = "forbid"
missing_docs       = "warn"
unreachable_pub    = "warn"
unused_must_use    = "deny"

[workspace.lints.clippy]
pedantic           = { level = "warn", priority = -1 }
nursery            = { level = "warn", priority = -1 }
unwrap_used        = "deny"
expect_used        = "warn"
panic              = "deny"
todo               = "warn"
dbg_macro          = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
lto                = "thin"
codegen-units      = 1
strip              = "symbols"
