[package]
name        = "clauders"
description = "Unofficial Rust SDK for the Anthropic Claude Messages API."
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
readme      = "README.md"
keywords    = ["claude", "anthropic", "llm", "sdk", "ai"]
categories  = ["api-bindings", "web-programming::http-client", "asynchronous"]

[lints]
workspace = true

[features]
default = ["messages", "messages-streaming", "messages-tools", "messages-caching", "transport-reqwest"]

# Messages API surface: request/response types and the MessagesResource
# entry point. Enabled by default; callers who only need types may disable
# it to trim unused code.
messages = []

# SSE streaming for the Messages API. Depends on `messages` and pulls in
# the `eventsource-stream` SSE parser.
messages-streaming = ["messages", "dep:eventsource-stream"]

# Tool (function calling) types for the Messages API. Depends on `messages`.
messages-tools = ["messages"]

# Gates `cache_control` fields on request types and cache-hit counters
# on `Usage` responses. Enabled by default; callers who never use prompt
# caching may disable it to keep the wire payload minimal.
messages-caching  = []

# Default HTTP transport (reqwest with rustls + http2 + stream features).
transport-reqwest = ["dep:reqwest"]

# Token-counting helper (`POST /v1/messages/count_tokens`).
# Depends on `messages`; not enabled by default.
messages-token-counting = ["messages"]

# Models resource (`GET /v1/models`, `GET /v1/models/{id}`).
# Standalone feature; not enabled by default.
models = []

# Internal-only: exposes MockHttpTransport for downstream tests.
# Double-underscore prefix signals not-for-public-use.
__test-mocks      = ["dep:mockall"]

[dependencies]
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
secrecy        = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
http           = { workspace = true }
http-body      = { workspace = true }
http-body-util = { workspace = true }
bytes          = { workspace = true }
futures-core       = { workspace = true }
pin-project-lite   = { workspace = true }
async-trait        = { workspace = true }
tokio          = { workspace = true }
reqwest              = { workspace = true, optional = true }
eventsource-stream   = { workspace = true, optional = true }
mockall              = { workspace = true, optional = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["full", "test-util"] }
mockall      = { workspace = true }
wiremock     = { workspace = true }
futures-util = { workspace = true }
trybuild     = { workspace = true }
insta        = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
