[package]
name        = "openrouter-rs"
description = "Unofficial Rust SDK for the OpenRouter API."
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
readme      = "README.md"
keywords    = ["openrouter", "llm", "sdk", "ai", "openai"]
categories  = ["api-bindings", "web-programming::http-client", "asynchronous"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
secrecy    = { workspace = true }
url        = { workspace = true }

[lints]
workspace = true
